# Api/docs/swagger.json
@@ -53,7 +53,7 @@
                 "summary": "Rename course",
                 "parameters": [
                     {
-                        "description": "Rename course",
+                        "description": "Rename course request",
                         "name": "req",
                         "in": "body",
                         "required": true,
@@ -125,7 +125,7 @@
                 "summary": "Delete course",
                 "parameters": [
                     {
-                        "description": "Delete course",
+                        "description": "Delete course request",
                         "name": "req",
                         "in": "body",
                         "required": true,
@@ -163,7 +163,7 @@
                 "summary": "Assign user to course",
                 "parameters": [
                     {
-                        "description": "Assign user",
+                        "description": "Assign user request",
                         "name": "req",
                         "in": "body",
                         "required": true,
@@ -183,7 +183,7 @@
             }
         },
         "/kurs/remove": {
-            "delete": {
+            "post": {
                 "security": [
                     {
                         "BearerAuth": []
@@ -201,7 +201,7 @@
                 "summary": "Remove user from course",
                 "parameters": [
                     {
-                        "description": "Remove user",
+                        "description": "Remove user request",
                         "name": "req",
                         "in": "body",
                         "required": true,
@@ -561,12 +561,12 @@
                     "application/json"
                 ],
                 "tags": [
-                    "AssingmentAction"
+                    "AssignmentAction"
                 ],
                 "summary": "Reschedule assignment",
                 "parameters": [
                     {
-                        "description": "Reschedule assingment",
+                        "description": "Reschedule assignment request",
                         "name": "req",
                         "in": "body",
                         "required": true,
@@ -597,12 +597,12 @@
                     "application/json"
                 ],
                 "tags": [
-                    "AssingmentAction"
+                    "AssignmentAction"
                 ],
                 "summary": "Create assignment",
                 "parameters": [
                     {
-                        "description": "Create course assingment",
+                        "description": "Create assignment request",
                         "name": "req",
                         "in": "body",
                         "required": true,
@@ -633,12 +633,12 @@
                     "application/json"
                 ],
                 "tags": [
-                    "AssingmentAction"
+                    "AssignmentAction"
                 ],
                 "summary": "Delete assignment",
                 "parameters": [
                     {
-                        "description": "Delete assingment",
+                        "description": "Delete assignment request",
                         "name": "req",
                         "in": "body",
                         "required": true,
@@ -671,7 +671,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "AssingmentAction"
+                    "AssignmentAction"
                 ],
                 "summary": "Check submission",
                 "parameters": [
@@ -683,9 +683,9 @@
                         "required": true
                     },
                     {
-                        "type": "string",
-                        "description": "Course name",
-                        "name": "nazwa_kursu",
+                        "type": "integer",
+                        "description": "Course ID",
+                        "name": "kurs_id",
                         "in": "query",
                         "required": true
                     },
@@ -721,7 +721,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "AssingmentAction"
+                    "AssignmentAction"
                 ],
                 "summary": "Submit assignment",
                 "parameters": [
@@ -733,9 +733,9 @@
                         "required": true
                     },
                     {
-                        "type": "string",
-                        "description": "Course name",
-                        "name": "nazwa_kursu",
+                        "type": "integer",
+                        "description": "Course ID",
+                        "name": "kurs_id",
                         "in": "formData",
                         "required": true
                     },
@@ -769,12 +769,12 @@
         "main.AssignUserReq": {
             "type": "object",
             "required": [
-                "nazwa_kursu",
+                "kurs_id",
                 "student_login"
             ],
             "properties": {
-                "nazwa_kursu": {
-                    "type": "string"
+                "kurs_id": {
+                    "type": "integer"
                 },
                 "student_login": {
                     "type": "string"
@@ -795,14 +795,14 @@
         "main.CreateAssignmentReq": {
             "type": "object",
             "required": [
-                "nazwa_kursu",
+                "kurs_id",
                 "nazwa_zadania",
                 "opis",
                 "termin"
             ],
             "properties": {
-                "nazwa_kursu": {
-                    "type": "string"
+                "kurs_id": {
+                    "type": "integer"
                 },
                 "nazwa_zadania": {
                     "type": "string"
@@ -834,12 +834,12 @@
         "main.DeleteAssignmentReq": {
             "type": "object",
             "required": [
-                "nazwa_kursu",
+                "kurs_id",
                 "nazwa_zadania"
             ],
             "properties": {
-                "nazwa_kursu": {
-                    "type": "string"
+                "kurs_id": {
+                    "type": "integer"
                 },
                 "nazwa_zadania": {
                     "type": "string"
@@ -849,11 +849,11 @@
         "main.DeleteCourseReq": {
             "type": "object",
             "required": [
-                "nazwa"
+                "kurs_id"
             ],
             "properties": {
-                "nazwa": {
-                    "type": "string"
+                "kurs_id": {
+                    "type": "integer"
                 }
             }
         },
@@ -905,12 +905,12 @@
         "main.RemoveUserReq": {
             "type": "object",
             "required": [
-                "nazwa_kursu",
+                "kurs_id",
                 "student_login"
             ],
             "properties": {
-                "nazwa_kursu": {
-                    "type": "string"
+                "kurs_id": {
+                    "type": "integer"
                 },
                 "student_login": {
                     "type": "string"
@@ -920,14 +920,14 @@
         "main.RenameCourseReq": {
             "type": "object",
             "required": [
-                "nowa_nazwa",
-                "stara_nazwa"
+                "kurs_id",
+                "nowa_nazwa"
             ],
             "properties": {
-                "nowa_nazwa": {
-                    "type": "string"
+                "kurs_id": {
+                    "type": "integer"
                 },
-                "stara_nazwa": {
+                "nowa_nazwa": {
                     "type": "string"
                 }
             }
@@ -935,13 +935,13 @@
         "main.RescheduleAssignmentReq": {
             "type": "object",
             "required": [
-                "nazwa_kursu",
+                "kurs_id",
                 "nazwa_zadania",
                 "nowy_termin"
             ],
             "properties": {
-                "nazwa_kursu": {
-                    "type": "string"
+                "kurs_id": {
+                    "type": "integer"
                 },
                 "nazwa_zadania": {
                     "type": "string"
